--- a/BeerProduction.OPC/app.config
+++ b/BeerProduction.OPC/app.config
@@ -55,6 +55,7 @@
     </assemblyBinding>
   </runtime>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
